syntax = "proto3";

package NRpc;

// HttpCode enum that maps to the EHttpCode enum in C++
enum HttpCode {
  UNKNOWN = 0;

  // 1xx - Informational
  CONTINUE = 100;
  SWITCHING_PROTOCOLS = 101;
  
  // 2xx - Success
  OK = 200;
  CREATED = 201;
  ACCEPTED = 202;
  NON_AUTH_INFO = 203;
  NO_CONTENT = 204;
  RESET_CONTENT = 205;
  PARTIAL_CONTENT = 206;
  
  // 3xx - Redirection
  MULTIPLE_CHOICES = 300;
  MOVED_PERMANENTLY = 301;
  FOUND = 302;
  SEE_OTHER = 303;
  NOT_MODIFIED = 304;
  TEMPORARY_REDIRECT = 307;
  PERMANENT_REDIRECT = 308;
  
  // 4xx - Client Error
  BAD_REQUEST = 400;
  UNAUTHORIZED = 401;
  FORBIDDEN = 403;
  NOT_FOUND = 404;
  METHOD_NOT_ALLOWED = 405;
  TIMEOUT = 408;
  CONFLICT = 409;
  GONE = 410;
  
  // 5xx - Server Error
  INTERNAL_ERROR = 500;
  NOT_IMPLEMENTED = 501;
  BAD_GATEWAY = 502;
  SERVICE_UNAVAILABLE = 503;
  GATEWAY_TIMEOUT = 504;
}

// Status message that can be embedded in responses
message Status {
  HttpCode code = 1;
  string message = 2;
}
